--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     display: flex;
     height: 620px;
     flex-direction: column;
+    background-color:#D5D8DC;
 }
 
 .headContainer {
@@ -11,7 +12,7 @@
 
 #menu {
     height: 50px;
-    background-color:#1dc674;
+    background-color:#85929E;
 }
 
 #headMenu {
@@ -70,16 +71,10 @@
     display: flex;
     flex-direction: row;
     height: 550px;
-    background-color: #a4fee4;
 }
 
-#photo {
-    border-style: dashed;
-    flex: 2;
-}
 
 #form {
-    border-style: double;
     flex: 3;
     text-align: center;
     padding: 20px;
