--- a/styles.css
+++ b/styles.css
@@ -30,13 +30,8 @@
     flex: 1;
     border-style: double;
     justify-content:center;
-}
-
-#if{
-    display: flex;
-    border-style: dashed;
-    background-color:rgb(196, 42, 42);
-    margin-left: ;
+    flex-direction:column;
+    align-items: center;
 }
 
 #personalDate {
